# Career_Kundi_2

./: .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.nomigrate.yml  docker-compose.yml  jobsearch_report.md  report.md
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dev  alembic.ini  foundation-alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/auto_apply/: __init__.py  agents.py  graph.py  mock_data.py  state.py
backend/app/agents/chatbot/: __init__.py  agents.py  graph.py  mock_data.py  state.py
backend/app/agents/common/: __init__.py  base.py  cost_monitor.py  graph_utils.py  guardrail.py  prompts.py  reflector.py  security.py  state.py
backend/app/agents/cv_builder/: __init__.py  agents.py  graph.py  mock_data.py  render.py  state.py  studio_template.py
backend/app/agents/cv_builder/tests/: test_quick_intake.py
backend/app/agents/job_extractor/: __init__.py  agents.py  graph.py  mock_data.py  state.py
backend/app/agents/job_search/: __init__.py  agents.py  company_research.py  graph.py  job_coverage_audit.py  job_intelligence.py  job_posting_extractor.py  mock_data.py  state.py
backend/app/agents/job_search/knowledge/: __init__.py  answer_builders.py  (+21 more)
backend/app/agents/roadmap/: __init__.py  agents.py  content_quality.py  graph.py  learning_content.py  mock_data.py  state.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  apply.py  auth.py  badges.py  chatbot.py  cv_builder.py  evidence.py  health.py  job_search.py  passport.py  platform.py  platform_subjects.py  profile.py  queue.py  review_requests.py  roadmap.py  role_packs.py  taxonomy.py
backend/app/career_passport/: __init__.py  contracts.py
backend/app/career_passport/application/: __init__.py  service.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  security.py
backend/app/data/: __init__.py  badges_seed.py  popular_roles_catalog.json  popular_roles_catalog.py  seed_corpus.py  seed_graph.py
backend/app/db/: __init__.py  base.py  migration_runner.py  session.py
backend/app/db/foundation_migrations/: README.md  env.py
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  apply.py  assets.py  attachment_scan.py  audit.py  badges.py  career_subject.py  chat.py  claim.py  cv.py  evidence.py  geo.py  job.py  lifecycle.py  memory.py  mixins.py  passport.py  privacy.py  profile.py  provenance.py  queue.py  review_request.py  roadmap.py  user.py
backend/app/db/tests/: __init__.py  pf1_test_db.py  test_migration_policy.py  test_migration_runner.py  test_passport_persistence.py
backend/app/platform/: __init__.py
backend/app/platform/badges/: __init__.py
backend/app/platform/claims/: README.md  __init__.py  contracts.py  display.py  refs.py  service.py  status.py
backend/app/platform/evidence/: README.md  __init__.py  attachment_local_scanner_adapter.py  attachment_quarantine_audit.py  attachment_quarantine_policy.py  attachment_quarantine_storage.py  attachment_safety.py  attachment_scan_admin_boundary.py  attachment_scan_queue.py  attachment_scan_result_persistence.py  attachment_scan_worker.py  attachment_scan_worker_dry_run.py  attachment_scan_worker_orchestration.py  attachment_scan_worker_reservation.py  attachment_scan_worker_result_application.py  attachment_scanner_adapter.py  attachment_scanner_policy.py  attachment_scanner_runtime_policy.py  contracts.py  display.py  refs.py  service.py  status.py  storage.py
backend/app/platform/geo/: README.md  __init__.py  kinds.py  refs.py  service.py
backend/app/platform/identity/: README.md  __init__.py  refs.py  service.py
backend/app/platform/kernel/: README.md  __init__.py  external_identifiers.py  ids.py
backend/app/platform/lifecycle/: README.md  __init__.py  kinds.py  refs.py  service.py
backend/app/platform/observability/: README.md  __init__.py  correlation.py  events.py  logging.py  middleware.py  redaction.py
backend/app/platform/privacy/: README.md  __init__.py  kinds.py  refs.py  service.py
backend/app/platform/provenance/: README.md  __init__.py  refs.py  service.py
backend/app/platform/verification/: README.md  __init__.py  contracts.py  display.py  refs.py  service.py  status.py
backend/app/schemas/: __init__.py  career_subject.py  chatbot.py  cv_builder.py  evidence.py  job_search.py  passport.py  platform.py  profile.py  review_request.py  roadmap.py  saved_job_search.py  taxonomy.py  user.py
backend/app/schemas/tests/: test_evidence_schema.py
backend/app/services/: badges.py  job_discovery.py  job_discovery_dedupe.py  matching.py  role_pack_library.py  saved_job_identity.py
backend/app/taxonomy/: __init__.py  catalog.py  contracts.py  normalization.py  registry.py
backend/app/tools/: __init__.py  cache.py  document_export.py  embeddings.py  graph_rag.py  llm.py  rag.py  scraper.py  search.py
backend/app/tools/tests/: test_llm.py  test_llm_provider.py
backend/data/: knowledge_graph.gpickle
backend/data/vector_store/: index.faiss  index.pkl
backend/scripts/: __init__.py  build_skill_knowledge.py  generate_baseline_interview_samples.py  generate_iteration_003_samples.py  generate_iteration_003a_samples.py  generate_iteration_003b_samples.py  generate_iteration_004a_samples.py  generate_iteration_004b_samples.py  generate_iteration_004c_samples.py  generate_iteration_004d_samples.py  generate_iteration_004e_b_samples.py  generate_iteration_004e_c_samples.py  generate_iteration_004e_d_samples.py  generate_iteration_004e_e2_samples.py  generate_iteration_004e_e_samples.py  generate_iteration_004e_f_samples.py  generate_iteration_004e_samples.py  seed.py  seed_role_packs.py
backend/tests/unit/: test_cv_studio_template_persistence.py  test_document_export.py  test_job_schemas.py  test_matching.py  test_passport_contract_boundary.py  test_roadmap_contract.py  test_role_pack_library.py  test_taxonomy_api.py  test_taxonomy_contract_boundary.py  test_taxonomy_registry.py
(+899 files in other folders)
