# =============================================================================
# pyproject.toml — Careerkundi Backend Package & Tooling Configuration
# =============================================================================
# This file is the single source of truth for the backend's Python package
# metadata, runtime dependencies, dev tooling, and linter/formatter settings.
# We use UV (https://github.com/astral-sh/uv) as the package manager because
# it resolves and installs dependencies 10-100x faster than pip/poetry, ships
# a built-in virtualenv manager, and produces a fully reproducible `uv.lock`.
# =============================================================================

# ---------------------------------------------------------------------------
# Build system — tells UV/pip which backend to use for editable installs.
# Without this section, `uv pip install -e .` and `uv sync` may fail because
# the tooling doesn't know how to build the package from source.
# Hatchling is a lightweight, modern build backend maintained by the PyPA.
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app"]
[project]
name = "careerkundi-backend"
version = "0.1.0"
description = "Careerkundi.com — Agentic AI Career Platform backend (FastAPI + LangGraph multi-agent system)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Careerkundi Engineering" }]

dependencies = [
    # --- Web framework & server -------------------------------------------
    "fastapi>=0.115.0",            # Async web framework powering every API route
    "uvicorn[standard]>=0.32.0",   # ASGI server with hot-reload + websockets support
    "python-multipart>=0.0.9",     # Required by FastAPI for form/file uploads (CV photos, JSON import)

    # --- Data validation & settings -----------------------------------------
    "pydantic>=2.9.0",             # Schema validation for every agent I/O contract
    "pydantic-settings>=2.5.0",    # Typed environment-variable configuration loader
    "email-validator>=2.0.0",       # Required by Pydantic's EmailStr type (used in schemas/user.py)

    # --- Database & persistence ---------------------------------------------
    "sqlalchemy>=2.0.35",          # ORM for Postgres (users, profiles, jobs, CVs, roadmaps)
    "alembic>=1.13.3",             # Versioned database migrations
    "asyncpg>=0.29.0",             # Async Postgres driver used by SQLAlchemy's async engine
    "psycopg2-binary>=2.9.9",      # Sync Postgres driver used by Alembic migrations

    # --- Caching ---------------------------------------------------------------
    "redis>=5.0.8",                # Prompt cache, rate limiting, session storage

    # --- Agentic AI stack --------------------------------------------------
    "langchain>=0.3.0",            # Chains, tools, retrievers, output parsers
    "langchain-community>=0.3.0",  # Community integrations (FAISS, document loaders)
    "langgraph>=0.2.34",           # Stateful multi-agent graph orchestration
    "langchain-google-genai>=2.0.0", # Gemini 2.5 Flash/Pro LangChain integration
    "google-generativeai>=0.8.3",  # Raw Gemini SDK (used by the embeddings + grounding tools)

    # --- Retrieval (RAG / GraphRAG) -----------------------------------------
    "faiss-cpu>=1.8.0.post1",      # Local vector store for RAG similarity search
    "networkx>=3.3",               # In-memory knowledge graph for GraphRAG traversal
    "sentence-transformers>=3.1.1",# Local embedding model fallback when no Gemini key is set

    # --- Web scraping --------------------------------------------------------
    "playwright>=1.47.0",          # Headless browser automation for JD/company scraping
    "beautifulsoup4>=4.12.3",      # HTML parsing of scraped pages
    "lxml>=5.3.0",                 # Fast HTML/XML parser backend for BeautifulSoup
    "httpx>=0.27.2",               # Async HTTP client for lightweight fetches + Gemini/SerpAPI calls

    # --- Document generation -------------------------------------------------
    "weasyprint>=62.3",            # HTML -> PDF rendering for CVs and roadmaps
    "python-docx>=1.1.2",          # DOCX export for CVs
    "markdown2>=2.5.0",            # Markdown CV export rendering

    # --- Auth & security -----------------------------------------------------
    "python-jose[cryptography]>=3.3.0", # JWT signing/verification
    "bcrypt>=4.2.0",               # Password hashing
    "slowapi>=0.1.9",              # Rate limiting middleware (per-user/IP/endpoint)

    # --- Observability ---------------------------------------------------------
    "structlog>=24.4.0",           # Structured JSON logging
    "opentelemetry-api>=1.27.0",   # Tracing API surface
    "opentelemetry-sdk>=1.27.0",   # Tracing SDK implementation
    "prometheus-client>=0.21.0",   # /metrics endpoint for Prometheus scraping

    # --- Utilities -----------------------------------------------------------
    "tenacity>=9.0.0",             # Exponential backoff retries (LLM + scraping calls)
    "python-slugify>=8.0.4",       # URL-safe slugs for cached entity keys
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",               # Test runner
    "pytest-asyncio>=0.24.0",      # Async test support (FastAPI + LangGraph nodes)
    "pytest-cov>=5.0.0",           # Coverage reporting
    "httpx>=0.27.2",               # Test client transport for FastAPI
    "black>=24.10.0",              # Code formatter
    "ruff>=0.7.0",                 # Fast linter (replaces flake8 + isort)
    "mypy>=1.13.0",                # Static type checking
    "factory-boy>=3.3.1",          # Test fixture factories
]

[tool.uv]
# UV-specific configuration: keep the resolution deterministic across machines.
package = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
